--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="Cleanliness">CLEANLINESS</string>
     <string name="Overallexp">OVERALL EXPERIENCE</string>
     <string name="Menuvariety">MENU VARIETY</string>
-    <string name="VisitFrequency">HOW OFTEN DO YOU COME HERE?</string>
+    <string name="VisitFrequency">FREQUENCY OF VISIT?</string>
     <string name="Othercomments">OTHER COMMENTS</string>
     <string name="Guestinfo">GUEST INFO</string>
     <string name="Name">Name</string>
